fix: text color, scrollbar corner color

--- a/styles.css
+++ b/styles.css
@@ -65,26 +65,25 @@ html {
     -webkit-text-size-adjust: 100%;
     tab-size: 4;
 
+    line-height: 1.8rem;
+
     /* nicer scrolling */
     scroll-behavior: smooth;
 }
 
 body {
     font-size: 1.15rem;
-    line-height: 1.8rem;
     margin: 0;
     display: grid;
     grid-template-columns: 1fr 75% 1fr;
     background-color: var(--bg);
-}
-
-body * {
-    grid-column: 2;
     color: var(--text);
 }
 
+body * { grid-column: 2; }
+
 /* scrollbar */
-/**
+/*
 webkit
 while it feels more customizable, the firefox standard scrollbar with custom color is better
 which feels counter intuitive, but i guess that's why they don't implement more scrollbar features
@@ -109,6 +108,10 @@ which feels counter intuitive, but i guess that's why they don't implement more 
 
 *::-webkit-scrollbar-thumb:active {
     background-color: var(--accent3);
+}
+
+*::-webkit-scrollbar-corner, *::-webkit-scrollbar-track {
+    background-color: transparent;
 }
 
 /**
